--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,6 @@ services:
         depends_on:
             - "mongodb"
         networks:
-            - "network"
             - "database_network"
     mongodb:
         image: mongo:4.0.8
@@ -33,19 +32,18 @@ services:
           timeout: 5s
           retries: 3
         restart: always
-    nginx:
-        image: nginx
-        volumes:
-          - ./nginx:/etc/nginx
-        ports:
-          - "8082:80"
-        depends_on:
-          - app
-        networks:
-          - "network"
+    # nginx:
+    #     image: nginx
+    #     volumes:
+    #       - ./nginx:/etc/nginx
+    #       - ./openings-collection/static:/usr/share/nginx/html/static
+    #     ports:
+    #       - "8082:80"
+    #     depends_on:
+    #       - app
+    #     networks:
+    #       - "network"
 networks:
-    network:
-        name: network
     database_network:
       name: database_network
 volumes:
