--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,20 +1,19 @@
-events {} # event context needs to be defined to consider config valid
-http { 
-    # include mime.types;
+# events {} # event context needs to be defined to consider config valid
+# http { 
+#     # include mime.types;
 
-    server {
-        listen 80 default_server;    
+#     server {
+#         listen 80 default_server;    
 
-        location / {
-            root /usr/share/nginx/html;
-            try_files $uri  $uri/ @server;
-        }
-        location @server {
-            proxy_pass http://app:5000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-    }
-}
+#         location / {
+#             proxy_pass http://app:5000;
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         }
+#         location /static {
+#             autoindex on;
+#             alias /usr/share/nginx/html/static/;
+#         }
+#     }
+# }
