--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,7 @@ services:
           MONGO_INITDB_ROOT_PASSWORD: pass
         volumes:
           - ./mongodb/scripts:/docker-entrypoint-initdb.d
-          # - mongodb-vol:/data/db
+          - mongodb-vol:/data/db
         networks:
             - "database_network"
         healthcheck:
