--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,41 +1,41 @@
-# events {} # event context needs to be defined to consider config valid
-# http { 
-#     # include mime.types;
+events {} 
+http{
+    server {
+        listen 80 default_server;
+        server_name chess-openings.ddns.net;
+        # return 301 https://$server_name$request_uri;
 
-#     server {
-#         listen 80 default_server;    
+        location / {
+            root /usr/share/nginx/html/static;
+            try_files $uri $uri/ @server;
+        }
 
-#         location / {
-#             proxy_pass http://app:5000;
-#             proxy_set_header Host $host;
-#             proxy_set_header X-Real-IP $remote_addr;
-#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         }
-#         location /static {
-#             autoindex on;
-#             alias /usr/share/nginx/html/static/;
-#         }
-#     }
-# }
+        location @server {
+            proxy_pass http://${BACKEND}:5000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+    }
+    
+    # server {
+    #     listen 443 default_server;
+    #     server_name portfolio-pp.ddns.net;
+        
+    #     if ($host != "portfolio-pp.ddns.net") {
+    #     return 404;
+    #     }
 
-# events {} 
-# http{
-#     server {
-#         server_name http://0.0.0.0
-#         listen 80 default_server;
+    #     location / {
+    #         root /usr/share/nginx/html/static;
+    #         try_files $uri $uri/ @server;
+    #     }
 
-#         location / {
-#             root /usr/share/nginx/html/static;
-#             try_files $uri $uri/ @server;
-#         }
-
-#         location @server {
-
-#             proxy_pass http://app:5000;
-#             proxy_set_header Host $host;
-#             proxy_set_header X-Real-IP $remote_addr;
-#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-#         }
-#     }
-# }
+    #     location @server {
+    #         proxy_pass http://${BACKEND}:5000;
+    #         proxy_set_header Host $host;
+    #         proxy_set_header X-Real-IP $remote_addr;
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     }
+    # }
+}
