--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,26 +16,26 @@ http{
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
-    }
-    
-    # server {
-    #     listen 443 default_server;
-    #     server_name portfolio-pp.ddns.net;
+        }
+
+    server {
+        listen 443 default_server;
+        server_name chess-openings.ddns.net;
         
-    #     if ($host != "portfolio-pp.ddns.net") {
-    #     return 404;
-    #     }
+        if ($host != "chess-openings.ddns.net") {
+        return 404;
+        }
 
-    #     location / {
-    #         root /usr/share/nginx/html/static;
-    #         try_files $uri $uri/ @server;
-    #     }
+        location / {
+            root /usr/share/nginx/html/static;
+            try_files $uri $uri/ @server;
+        }
 
-    #     location @server {
-    #         proxy_pass http://${BACKEND}:5000;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     }
-    # }
+        location @server {
+            proxy_pass http://${BACKEND}:5000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+    }
 }
