--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,2 +1,4 @@
-FROM nginx:latest
-COPY nginx.conf /etc/nginx/templates/nginx.conf.template
+FROM nginx:stable-alpine
+RUN ls
+COPY ./nginx.conf /etc/nginx/templates/nginx.conf.template
+CMD ["nginx", "-g", "daemon off;"]
