--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,7 @@ events {}
 http{
     server {
         listen 80 default_server;
-        server_name chess-openings.ddns.net;
+        server_name maciejgroszyk.click;
         # return 301 https://$server_name$request_uri;
 
         location / {
@@ -20,9 +20,9 @@ http{
 
     server {
         listen 443 default_server;
-        server_name chess-openings.ddns.net;
+        server_name maciejgroszyk.click;
         
-        if ($host != "chess-openings.ddns.net") {
+        if ($host != "maciejgroszyk.click") {
         return 404;
         }
 
