--- a/openings-collection/Dockerfile
+++ b/openings-collection/Dockerfile
@@ -1,4 +1,5 @@
 FROM python:3.10-slim-buster
+WORKDIR /chess-app
 COPY . .
 RUN pip install -r requirements.txt
 CMD [ "python3", "-m" , "flask", "--app", "app.py", "run", "--host=0.0.0.0"]
