--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,5 @@
 FROM nginx:stable-alpine
-RUN ls
 COPY ./nginx.conf /etc/nginx/templates/nginx.conf.template
 CMD ["nginx", "-g", "daemon off;"]
+
+#Probably better way to use volume instead of copy
